Tue May  8 09:04:03 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed a va_arg in silc/client_ops.c.

	* Oops, RC5 routines were named AES and caused some problems
	  when not using SIM's.  Affected file lib/silccrypt/rc5.c.

Sun May  6 13:59:48 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added new SilcIDIP structure into the lib/silccore/id.h and
	  replaced the old `ip' fields from all SILC ID's to that type.
	  This is a step towards IPv6 support.

	  The silc_id_get_len takes now the ID as an extra argument.
	  The silc_id_id2str, silc_id_str2id and silc_id_dup now supports
	  both IPv4 and IPv6 based ID's.

	  The affected files are lib/silccore/id.[ch] and other files
	  around the tree using these routines.

	* Removed the ID length arguments in server from various 
	  silc_server_send_notify_* routines -> they are not needed 
	  anymore.

Sat May  5 13:56:33 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed memory leak in silc_encode_pem_file in the file
	  lib/silcutil/silcutil.c.

Thu May  3 21:23:50 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Check minor version as well in the SKE.  Affected files are
	  silcd/protocol.c and lib/silcclient/protocol.c.

	* Added --identifier option to the server so that an identifier
	  can be when creating the public key for the server.  Affected
	  file is silcd/silcd.c.

	* Fixed minor decoding bug in silc_pkcs_decode_identifier in
	  lib/silccrypt/silcpkcs.c.

Wed May  2 20:50:49 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Register default ciphers and stuff when using -C option with
	  the server.  Affected file sildc/silcd.c.

	* Put back the servers public key filename format, it is better
	  than the new one.  For now, the client keys are saved with the
	  new filename format.  The affected file silc/client_ops.c.

	* Implemented the Cipher API for the rest of the ciphers that
	  did not implement it or implemented it the wrong way.
